// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colon prop 1`] = `
<form class="van-form">
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>Label:</span></div>
    <div class="van-cell__value van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label">Custom Label:</div>
    <div class="van-cell__value van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`error-message-align prop 1`] = `
<form class="van-form">
  <div class="van-cell van-field">
    <div class="van-cell__value van-cell__value--alone van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
      <div class="van-field__error-message van-field__error-message--right">Error</div>
    </div>
  </div>
</form>
`;

exports[`input-align prop 1`] = `
<form class="van-form">
  <div class="van-cell van-field">
    <div class="van-cell__value van-cell__value--alone van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control van-field__control--right"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__value van-cell__value--alone van-field__value">
      <div class="van-field__body">
        <div class="van-field__control van-field__control--right van-field__control--custom">
          <div></div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`label-align prop 1`] = `
<form class="van-form">
  <div class="van-cell van-field van-field--label-right">
    <div class="van-cell__title van-field__label van-field__label--right"><span>Label</span></div>
    <div class="van-cell__value van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field van-field--label-center">
    <div class="van-cell__title van-field__label van-field__label--center"><span>Label</span></div>
    <div class="van-cell__value van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`label-width prop 1`] = `
<form class="van-form">
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label" style="width: 5rem;"><span>Label</span></div>
    <div class="van-cell__value van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label" style="width: 10vw;"><span>Label</span></div>
    <div class="van-cell__value van-field__value">
      <div class="van-field__body"><input type="text" class="van-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`validate-first prop 1`] = `
<form class="van-form">
  <div class="van-cell van-field van-field--error">
    <div class="van-cell__value van-cell__value--alone van-field__value">
      <div class="van-field__body"><input type="text" name="A" class="van-field__control"></div>
      <div class="van-field__error-message">A failed</div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__value van-cell__value--alone van-field__value">
      <div class="van-field__body"><input type="text" name="B" class="van-field__control"></div>
    </div>
  </div> <button type="submit" class="van-button van-button--default van-button--normal">
    <div class="van-button__content"></div>
  </button>
</form>
`;
